added MovieDetails and installed react-icons

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
   grid-template-columns: auto auto;
   text-align: center;
 }
-.sideHeaders h1 {
+.sideHeaders .details{
   padding: 10px;
   text-align: center;
 }
