--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,8 @@
 .App-header {
   text-align: center;
   font-size: calc(10px + 2vmin);
+  padding:30px;
+  border-bottom: 3px solid skyblue;
 }
 
 .sideHeaders {
@@ -30,9 +32,22 @@ h2 {
 }
 
 .starFill {
-  fill:skyblue;
+  color:skyblue;
 }
 
 .starRatingFill {
-  fill:maroon;
+  color:maroon;
+}
+
+.stars{
+  font-size:50px;
+}
+
+.movieRaterHeader{
+  border-top: 3px solid maroon;
+  margin-top: 50px;
+}
+
+.eachMovieName{
+  cursor:pointer;
 }
