--- a/src/App.css
+++ b/src/App.css
@@ -71,10 +71,30 @@ h2 {
   grid-template-columns: auto auto;
   row-gap:10px;
   align-items:center;
-  padding-top:20px;
+  padding:20px;
+  width:50%;
   
 }
 
 .loginScreen{
   padding:20px;
+}
+
+input, textarea {
+  padding:0.4rem;
+  margin:3px;
+}
+
+button {
+  background-color: grey;
+  border-radius: 3px;
+  color:#222222;
+  padding: 2px 10px;
+  cursor: pointer;
+}
+
+button:disabled {
+  background-color: #222222;
+  color:grey;
+  cursor: default;
 }
