made a way to logout and made a personal hook

--- a/src/App.css
+++ b/src/App.css
@@ -98,3 +98,10 @@ button:disabled {
   color:grey;
   cursor: default;
 }
+
+.logout{
+  position: absolute;
+  right:5px;
+  top:-10px;
+  cursor:pointer;
+}
